Added google analytics module

--- a/root/config.json
+++ b/root/config.json
@@ -8,6 +8,7 @@
         "header_logo",
         "overlay",
         "forms",
+        "google_analytics",
         "skip_links",
         "responsive_image",
         "responsive_video",
