Switched to work email from Bitbucket/Github email.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "email": "abarnes@squiz.com.au"
   }, {
     "name": "Dianne Castillo",
-    "email": "dcastillo@fictrix.net"
+    "email": "dcastillo@squiz.com.au"
   }],
 
   "dependencies": {
