The boilerplate generator now in working order

--- a/app/templates/config.json
+++ b/app/templates/config.json
@@ -2,5 +2,5 @@
     "source":        "source",
     "dest":          "dist",
     "tmp":           ".tmp",
-    "file_dest":     "mysource_files"
+    "file_dest":     "<% if (matrix) { %>mysource_<% } %>files"
 }
