Changed the way bower dependencies are handled and resolved into the HTML template

--- a/app/templates/config.json
+++ b/app/templates/config.json
@@ -2,5 +2,6 @@
     "source":        "source",
     "dest":          "dist",
     "tmp":           ".tmp",
-    "file_dest":     "<% if (matrix) { %>mysource_<% } %>files"
+    "file_dest":     "<% if (matrix) { %>mysource_<% } %>files",
+    "module_prefix": "squiz-module-"
 }
