Added Tim's name to list of contributors

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     {
       "name": "James Sinclair",
       "email": "jsinclair@squiz.com.au"
+    },
+    {
+      "name": "Tim Tran",
+      "email": "ttran@squiz.com.au"
     }
   ],
   "main": "app/index.js",
