Moved bootstrap and foundation builds into the core of the boilerplate builder

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   },
   "dependencies": {
     "yeoman-generator": "~0.14.0",
-    "lingo": "*"
+    "lingo": "*",
+    "cheerio": "*",
+    "request": "*"
   },
   "devDependencies": {
 
