--- a/app/templates/config.json
+++ b/app/templates/config.json
@@ -3,5 +3,12 @@
     "dest":          "dist",
     "tmp":           ".tmp",
     "file_dest":     "<% if (matrix) { %>mysource_<% } %>files",
-    "module_prefix": "squiz-module-"
+    "module_prefix": "squiz-module-",
+    "bower_ignore": [
+        "jquery",
+        "modernizr",
+        "bootstrap-sass",
+        "foundation",
+        "datatables"
+    ]
 }
