--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "yeoman-generator": "~0.14.0",
-    "lingo": "*",
+    "slang": "*",
     "cheerio": "*",
     "request": "*"
   },
