--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "rimraf": "*"
+    "rimraf": "*",
+    "async": "*"
   },
   "engines": {
     "node": ">=0.8.0",
