--- a/app/templates/config.json
+++ b/app/templates/config.json
@@ -10,5 +10,14 @@
         "bootstrap-sass",
         "foundation",
         "datatables"
+    ],
+    "autoprefixer": true,
+    "browsers": [
+        "> 1%",
+        "last 2 versions",
+        "Firefox ESR",
+        "Opera 12.1",
+        <% if (ie8) { %>"IE 8",<% } %>
+        "IE 9"
     ]
 }
