Async should be a dependency not a dev dependency. This will fix the issue of the sub module generator not running

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "request": "*",
     "moment": "*",
     "semver": "*",
-    "chalk": "*"
+    "chalk": "*",
+    "async": "*"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
@@ -50,7 +51,6 @@
   "devDependencies": {
     "mocha": "*",
     "rimraf": "*",
-    "async": "*",
     "lodash": "*"
   },
   "engines": {
